CREATED part of header section

--- a/src/assets/components/header.pug
+++ b/src/assets/components/header.pug
@@ -1,2 +1,11 @@
-header
-	p header content goes here
+header(class="header")
+	div(class="logo")
+		h1 Pyramid Special Jewelry
+	nav
+		a(href="#") Home
+		a(href="#") Company
+		a(href="#") Services
+		a(href="#") Gallery
+		a(href="#") Contact
+	div
+		button Schedule Appointment
